--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--
+    This edited code for html wrote by chrostopher columbus
+    -->
   </body>
 </html>
